--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -37,6 +37,9 @@ body {
     margin-right: 15px;
 }
 
+.has-feedback .glyphicon {
+    padding-right: 35px;
+}
 .results a {
     text-decoration: none;
     color: black;
